src/main/java/akki697222/andesite/compiler/AndesiteParser.java
// Generated from akki697222/andesite/compiler/AndesiteParser.g4 by ANTLR 4.13.2
package akki697222.andesite.compiler;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AndesiteParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ADD=1, SUB=2, MUL=3, DIV=4, MOD=5, L_AND=6, L_OR=7, L_NOT=8, L_XOR=9, 
		EQ=10, NE=11, GT=12, LT=13, GTE=14, LTE=15, B_AND=16, B_OR=17, B_XOR=18, 
		B_NOT=19, B_LSHIFT=20, B_RSHIFT=21, INCL=22, DECL=23, IF=24, ELSE=25, 
		FOR=26, IN=27, IS=28, NOT=29, OVERRIDE=30, RETURN=31, CONSTRUCTOR=32, 
		WHILE=33, REPEAT=34, UNTIL=35, TRY=36, CATCH=37, FINALLY=38, BREAK=39, 
		SWITCH=40, CASE=41, SELF=42, DEFAULT=43, CAST=44, CLASS=45, INTERFACE=46, 
		ABSTRACT=47, IMPLEMENTS=48, EXTENDS=49, FINAL=50, CONST=51, VAR=52, FUNCTION=53, 
		SKIPS=54, NEW=55, STATIC=56, NATIVE=57, ASSIGN=58, ADD_ASSIGN=59, SUB_ASSIGN=60, 
		MUL_ASSIGN=61, DIV_ASSIGN=62, MOD_ASSIGN=63, PUBLIC=64, PRIVATE=65, PROTECTED=66, 
		STRING=67, INTEGER=68, LONG=69, FLOAT=70, DOUBLE=71, CHAR=72, VOID=73, 
		BOOLEAN=74, OBJECT=75, NULL=76, LBRACKET=77, RBRACKET=78, LBRACE=79, RBRACE=80, 
		LPAREN=81, RPAREN=82, DOT=83, COMMA=84, SEMI=85, COLON=86, VARARGS=87, 
		LAMBDA=88, QUESTION=89, INT=90, FLOATS=91, HEX=92, BIN=93, TRUE=94, FALSE=95, 
		STRINGS=96, CHARS=97, IDENTIFIER=98, WS=99, COMMENT=100, COMMENT_LONG=101;
	public static final int
		RULE_program = 0, RULE_statements = 1, RULE_functionDeclaration = 2, RULE_nativeFunctionDeclaration = 3, 
		RULE_constantDeclaration = 4, RULE_functionModifier = 5, RULE_modifier = 6, 
		RULE_variableDeclaration = 7, RULE_classDeclaration = 8, RULE_objectiveExtends = 9, 
		RULE_objectiveImplements = 10, RULE_interfacesDeclaration = 11, RULE_returnStatement = 12, 
		RULE_ifStatement = 13, RULE_repeatStatement = 14, RULE_whileStatement = 15, 
		RULE_forStatement = 16, RULE_forInitializer = 17, RULE_forUntil = 18, 
		RULE_elseIfStatement = 19, RULE_elseStatement = 20, RULE_block = 21, RULE_classBlock = 22, 
		RULE_constructorDeclaration = 23, RULE_accessModifier = 24, RULE_parameterList = 25, 
		RULE_parameter = 26, RULE_argumentList = 27, RULE_argument = 28, RULE_variableInitializer = 29, 
		RULE_rightExpression = 30, RULE_expression = 31, RULE_arrayInitializer = 32, 
		RULE_arrayItems = 33, RULE_arrayAccess = 34, RULE_primary = 35, RULE_chainReference = 36, 
		RULE_reference = 37, RULE_instantiate = 38, RULE_methodInvoke = 39, RULE_types = 40, 
		RULE_baseTypes = 41, RULE_primitive = 42, RULE_identifier = 43, RULE_literal = 44, 
		RULE_string = 45, RULE_boolean = 46, RULE_number = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statements", "functionDeclaration", "nativeFunctionDeclaration", 
			"constantDeclaration", "functionModifier", "modifier", "variableDeclaration", 
			"classDeclaration", "objectiveExtends", "objectiveImplements", "interfacesDeclaration", 
			"returnStatement", "ifStatement", "repeatStatement", "whileStatement", 
			"forStatement", "forInitializer", "forUntil", "elseIfStatement", "elseStatement", 
			"block", "classBlock", "constructorDeclaration", "accessModifier", "parameterList", 
			"parameter", "argumentList", "argument", "variableInitializer", "rightExpression", 
			"expression", "arrayInitializer", "arrayItems", "arrayAccess", "primary", 
			"chainReference", "reference", "instantiate", "methodInvoke", "types", 
			"baseTypes", "primitive", "identifier", "literal", "string", "boolean", 
			"number"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", "'^^'", 
			"'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'&'", "'|'", "'^'", "'~'", 
			"'<<'", "'>>'", "'++'", "'--'", "'if'", "'else'", "'for'", "'in'", "'is'", 
			"'not'", "'override'", "'return'", "'constructor'", "'while'", "'repeat'", 
			"'until'", "'try'", "'catch'", "'finally'", "'break'", "'switch'", "'case'", 
			"'self'", "'default'", "'cast'", "'class'", "'interface'", "'abstract'", 
			"'impl'", "'exts'", "'final'", "'const'", "'var'", "'fn'", "'skip'", 
			"'new'", "'static'", "'native'", "'='", "'+='", "'-='", "'*='", "'/='", 
			"'%='", "'public'", "'private'", "'protected'", "'string'", "'int'", 
			"'long'", "'float'", "'double'", "'char'", "'void'", "'bool'", "'object'", 
			null, "'['", "']'", "'{'", "'}'", "'('", "')'", "'.'", "','", "';'", 
			"':'", "'...'", "'=>'", "'?'", null, null, null, null, "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ADD", "SUB", "MUL", "DIV", "MOD", "L_AND", "L_OR", "L_NOT", "L_XOR", 
			"EQ", "NE", "GT", "LT", "GTE", "LTE", "B_AND", "B_OR", "B_XOR", "B_NOT", 
			"B_LSHIFT", "B_RSHIFT", "INCL", "DECL", "IF", "ELSE", "FOR", "IN", "IS", 
			"NOT", "OVERRIDE", "RETURN", "CONSTRUCTOR", "WHILE", "REPEAT", "UNTIL", 
			"TRY", "CATCH", "FINALLY", "BREAK", "SWITCH", "CASE", "SELF", "DEFAULT", 
			"CAST", "CLASS", "INTERFACE", "ABSTRACT", "IMPLEMENTS", "EXTENDS", "FINAL", 
			"CONST", "VAR", "FUNCTION", "SKIPS", "NEW", "STATIC", "NATIVE", "ASSIGN", 
			"ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", 
			"PUBLIC", "PRIVATE", "PROTECTED", "STRING", "INTEGER", "LONG", "FLOAT", 
			"DOUBLE", "CHAR", "VOID", "BOOLEAN", "OBJECT", "NULL", "LBRACKET", "RBRACKET", 
			"LBRACE", "RBRACE", "LPAREN", "RPAREN", "DOT", "COMMA", "SEMI", "COLON", 
			"VARARGS", "LAMBDA", "QUESTION", "INT", "FLOATS", "HEX", "BIN", "TRUE", 
			"FALSE", "STRINGS", "CHARS", "IDENTIFIER", "WS", "COMMENT", "COMMENT_LONG"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AndesiteParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AndesiteParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AndesiteParserListener ) ((AndesiteParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AndesiteParserListener ) ((AndesiteParserListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 269340795474018564L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 34292772867L) != 0)) {
				{
				{
				setState(96);
				statements();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementsContext extends ParserRuleContext {
		public NativeFunctionDeclarationContext nativeFunctionDeclaration() {
			return getRuleContext(NativeFunctionDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public InterfacesDeclarationContext interfacesDeclaration() {
			return getRuleContext(InterfacesDeclarationContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(AndesiteParser.SEMI, 0); }
		public ConstantDeclarationContext constantDeclaration() {
			return getRuleContext(ConstantDeclarationContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public RepeatStatementContext repeatStatement() {
			return getRuleContext(RepeatStatementContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AndesiteParserListener ) ((AndesiteParserListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AndesiteParserListener ) ((AndesiteParserListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				nativeFunctionDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				functionDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				classDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(105);
				interfacesDeclaration();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(106);
				variableDeclaration();
				setState(107);
				match(SEMI);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(109);
				constantDeclaration();
				setState(110);
				match(SEMI);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(112);
				expression(0);
				setState(113);
				match(SEMI);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(115);
				returnStatement();
				setState(116);
				match(SEMI);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(118);
				ifStatement();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(119);
				forStatement();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(120);
				whileStatement();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(121);
				repeatStatement();
				setState(122);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclarationContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(AndesiteParser.FUNCTION, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(AndesiteParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(AndesiteParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(AndesiteParser.COLON, 0); }
		public TypesContext types() {
			return getRuleContext(TypesContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public AccessModifierContext accessModifier() {
			return getRuleContext(AccessModifierContext.class,0);
		}
		public List<FunctionModifierContext> functionModifier() {
			return getRuleContexts(FunctionModifierContext.class);
		}
		public FunctionModifierContext functionModifier(int i) {
			return getRuleContext(FunctionModifierContext.class,i);
		}
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(AndesiteParser.SEMI, 0); }
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AndesiteParserListener ) ((AndesiteParserListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AndesiteParserListener ) ((AndesiteParserListener)listener).exitFunctionDeclaration(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionDeclaration);
		int _la;
		try {
			setState(166);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PUBLIC || _la==PRIVATE) {
					{
					setState(126);
					accessModifier();
					}
				}

				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 73324232506867712L) != 0)) {
					{
					{
					setState(129);
					functionModifier();
					}
					}
					setState(134);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(135);
				match(FUNCTION);
				setState(136);
				identifier();
				setState(137);
				match(LPAREN);
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER) {
					{
					setState(138);
					parameterList();
					}
				}

				setState(141);
				match(RPAREN);
				setState(142);
				match(COLON);
				setState(143);
				types();
				setState(144);
				block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PUBLIC || _la==PRIVATE) {
					{
					setState(146);
					accessModifier();
					}
				}

				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 73324232506867712L) != 0)) {
					{
					{
					setState(149);
					functionModifier();
					}
					}
					setState(154);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(155);
				match(FUNCTION);
				setState(156);
				identifier();
				setState(157);
				match(LPAREN);
				setState(159);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==IDENTIFIER) {
					{
					setState(158);
					parameterList();
					}
				}

				setState(161);
				match(RPAREN);
				setState(162);
				match(COLON);
				setState(163);
				types();
				setState(164);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NativeFunctionDeclarationContext extends ParserRuleContext {
		public TerminalNode NATIVE() { return getToken(AndesiteParser.NATIVE, 0); }
		public TerminalNode FUNCTION() { return getToken(AndesiteParser.FUNCTION, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(AndesiteParser.LPAREN, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(AndesiteParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(AndesiteParser.COLON, 0); }
		public TypesContext types() {
			return getRuleContext(TypesContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(AndesiteParser.SEMI, 0); }
		public AccessModifierContext accessModifier() {
			return getRuleContext(AccessModifierContext.class,0);
		}
		public List<ModifierContext> modifier() {
			return getRuleContexts(ModifierContext.class);
		}
		public ModifierContext modifier(int i) {
			return getRuleContext(ModifierContext.class,i);
		}
		public NativeFunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nativeFunctionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AndesiteParserListener ) ((AndesiteParserListener)listener).enterNativeFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AndesiteParserListener ) ((AndesiteParserListener)listener).exitNativeFunctionDeclaration(this);
		}
	}

	public final NativeFunctionDeclarationContext nativeFunctionDeclaration() throws RecognitionException {
		NativeFunctionDeclarationContext _localctx = new NativeFunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_nativeFunctionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PUBLIC || _la==PRIVATE) {
				{
				setState(168);
				accessModifier();
				}
			}

			setState(174);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 73324231433125888L) != 0)) {
				{
				{
				setState(171);
				modifier();
				}
				}
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(177);
			match(NATIVE);
			setState(178);
			match(FUNCTION);
			setState(179);
			identifier();
			setState(180);
			match(LPAREN);
			setState(181);
			parameterList();
			setState(182);
			match(RPAREN);
			setState(183);
			match(COLON);
			setState(184);
			types();
			setState(185);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstantDeclarationContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(AndesiteParser.CONST, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode COLON() { return getToken(AndesiteParser.COLON, 0); }
		public TypesContext types() {
			return getRuleContext(TypesContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(AndesiteParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AccessModifierContext accessModifier() {
			return getRuleContext(AccessModifierContext.class,0);
		}
		public ConstantDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AndesiteParserListener ) ((AndesiteParserListener)listener).enterConstantDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AndesiteParserListener ) ((AndesiteParserListener)listener).exitConstantDeclaration(this);
		}
	}

	public final ConstantDeclarationContext constantDeclaration() throws RecognitionException {
		ConstantDeclarationContext _localctx = new ConstantDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constantDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PUBLIC || _la==PRIVATE) {
				{
				setState(187);
				accessModifier();
				}
			}

			setState(190);
			match(CONST);
			setState(191);
			identifier();
			setState(192);
			match(COLON);
			setState(193);
			types();
			setState(194);
			match(ASSIGN);
			setState(195);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionModifierContext extends ParserRuleContext {
		public TerminalNode OVERRIDE() { return getToken(AndesiteParser.OVERRIDE, 0); }
		public ModifierContext modifier() {
			return getRuleContext(ModifierContext.class,0);
		}
		public FunctionModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionModifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AndesiteParserListener ) ((AndesiteParserListener)listener).enterFunctionModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AndesiteParserListener ) ((AndesiteParserListener)listener).exitFunctionModifier(this);
		}
	}

	public final FunctionModifierContext functionModifier() throws RecognitionException {
		FunctionModifierContext _localctx = new FunctionModifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionModifier);
		try {
			setState(199);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OVERRIDE:
				enterOuterAlt(_localctx, 1);
				{
				setState(197);
				match(OVERRIDE);
				}
				break;
			case ABSTRACT:
			case FINAL:
			case STATIC:
				enterOuterAlt(_localctx, 2);
				{
				setState(198);
				modifier();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModifierContext extends ParserRuleContext {
		public TerminalNode FINAL() { return getToken(AndesiteParser.FINAL, 0); }
		public TerminalNode STATIC() { return getToken(AndesiteParser.STATIC, 0); }
		public TerminalNode ABSTRACT() { return getToken(AndesiteParser.ABSTRACT, 0); }
		public ModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AndesiteParserListener ) ((AndesiteParserListener)listener).enterModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AndesiteParserListener ) ((AndesiteParserListener)listener).exitModifier(this);
		}
	}
